--- a/app/views/components/archive.html
+++ b/app/views/components/archive.html
@@ -1,5 +1,5 @@
 <!-- Affiche la liste des todo effectués-->
 <h2 *ngIf="notToDoList">{{ titleNotDo }}</h2>
 <section *ngFor="let todo of notToDoList" >
-  <todo-item [todo]="todo" (sendToDoDetail)="toList($event)"></todo-item>
+  <todo-item [todo]="todo" (sendToDoDetail)="toList($event)" (deleteToDoDetail)="deleteToDo($event)"></todo-item>
 </section>
